Bug: Try to fix the issues with viewing on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,7 +648,7 @@ fieldset>legend {
 
 /* Media queries for tablets in landscape mode/small laptops */
 
-@media (min-width:780px) and (max-width: 1024px) and (orientation: landscape) {
+@media screen and (min-width:780px) and (max-width: 1024px) and (orientation: landscape) {
   h1 {
     padding-top: 10%;
   }
@@ -735,7 +735,7 @@ fieldset>legend {
 
 /* Media query for phones - landscape */
 
-@media (min-width: 481px) and (max-width: 600px) {
+@media (min-width: 481px) and (max-width: 600px) and (orientation: landscape) {
 
   h1 {
     font-size: 1.5em;
